<resources>
    <string name="app_name">多拉阅读</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="start_app">启动应用</string>

    <string name="evaluate">评价一下</string>
    <string name="check_update">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="switch_push">消息推送</string>
    <string name="friend_cicle">朋友圈</string>
    <string name="wechat">微信</string>
    <string name="qq_friend">QQ好友</string>
    <string name="qq_zone">QQ空间</string>
    <string name="micro_blog_sina">新浪微博</string>
    <string name="connect">链接</string>
    <string name="loding_check_update">正在检查更新</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="sagittarius">星座设定</string>
    <string name="detail">详情</string>
    <string name="today_star">今日运势</string>
    <string name="cope_sucess">已经复制到粘贴版</string>
    <string name="login_detail_str_one">选择你喜欢的方式</string>
    <string name="login_detail_str_two">登录多拉阅读</string>
    <string name="login_cancel">取消</string>

    <string name="text_reading">阅读</string>
    <string name="no_market">抱歉，没有找到您手机上的应用市场</string>

    <string name="say_something">说点什么...</string>
    <string name="load_more_all">已经到底了...</string>
    <string name="three_loading">正在加载中...</string>
    <string name="share_error">分享失败</string>
    <string name="share_cancel">取消</string>
    <string name="share_complete">分享成功</string>
    <string name="login_error">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="logout_error">退出登录失败</string>
    <string name="logout_loding">正在退出...</string>
    <string name="sdk_no_support">SDK不支持</string>
    <string name="sina_not_install">没有安装新浪微博客户端</string>
    <string name="authentication_error">授权失败</string>

    <string name="detail_answer">回复</string>


    <string name="star_today_lucky">今日运势</string>
    <string name="star_today_lucky_text">查看每日星座运势</string>
    <string name="star_check_going">快去看看吧</string>
    <string name="star_money_nun">金钱指数</string>
    <string name="star_love_num">爱情指数</string>
    <string name="star_lucky_num">幸运数字</string>
    <string name="star_healthy_num">健康指数</string>
    <string name="star_luvky_color">幸运颜色</string>
    <string name="star_work_num">工作指数</string>
    <string name="star_perpon_num">贵人星座</string>

    <string name="yueduyuanwen">阅读原文</string>
    <string name="xiangguantuijian">相关推荐</string>
    <string name="quanbupinglun">全部评论</string>

    <string name="close_push">推送已关闭</string>
    <string name="open_push">推送已开启</string>

    <string name="tips_msg0">暂无可推荐的数据</string>
    <string name="tips_msg1">根据你得兴趣推荐 %1$d 条更新</string>
    <string name="repeat_onclick_login_out_app">再按一次退出程序</string>

    <string name="search_error">没有相关内容</string>

    <string name="share_tips_tips">多拉阅读-全球首款女性智能兴趣阅读App</string>
    <string name="share_tips_1">全球首款女性智能兴趣阅读App</string>
    <string name="share_from">来自多拉阅读的分享</string>

    <string name="update_is_new">当前已是最新版本</string>


    <string name="star_zunheyunshi">综合运势</string>

    <string name="star_meiritixing">每日提醒</string>

</resources>
