<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_f2f2f2" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
			android:weightSum="4"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp">
			<LinearLayout
				android:id="@+id/ll_friend_cicle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:layout_weight="1">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:background="@drawable/xml_click_weixin_friend_ground_sytle"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/friend_cicle"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/ll_wechat"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:layout_weight="1">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:background="@drawable/xml_click_weixin_friend_sytle"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/wechat"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/qq_ll"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:layout_weight="1">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:background="@drawable/xml_click_qq_friend_sytle"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/qq_friend"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/qq_zone_ll"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:layout_weight="1">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:background="@drawable/xml_click_qq_zone_sytle"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/qq_zone"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>



	</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:layout_marginBottom="10dp"
			android:weightSum="4">
			<LinearLayout
				android:id="@+id/ll_micro_blog_sina"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:layout_weight="1">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:background="@drawable/xml_click_weibo_sytle"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/micro_blog_sina"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/ll_cope_url"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:layout_weight="1">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:background="@drawable/xml_click_cope_url_sytle"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/connect"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:visibility="invisible"
				android:layout_weight="1">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:src="@drawable/ic_launcher"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/connect"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:visibility="invisible"
				android:layout_weight="1">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:src="@drawable/ic_launcher"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/connect"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>


		</LinearLayout>




	</LinearLayout>

	<View 
	    android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dddddd"/>
	<Button 
	    android:id="@+id/id_cancel"
	    android:layout_width="match_parent"
	    android:layout_height="47dp"
	    android:text="取消"
	    android:textColor="#333333"
	    android:textSize="14sp"
	    android:background="@drawable/xml_buttom_dialog_btn_bg"/>
		<View 
	    android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dddddd"/>
</LinearLayout>
